--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
@@ -33,7 +33,7 @@
         </ul>
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link text-danger" href="#">Logout</a>
+                <a class="nav-link text-danger" href="/logout">Logout</a>
             </li>
         </ul>
     </div>
