--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Início</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Clientes</a>
+                <a class="nav-link" href="/clientes">Clientes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Produtos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Vendas</a>
@@ -32,39 +35,19 @@
             </li>
         </ul>
         <ul class="nav nav-tabs">
+            <div class="dropdown">
+                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Configurações</button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </div>
             <li class="nav-item">
                 <a class="nav-link text-danger" href="/logout">Logout</a>
             </li>
         </ul>
     </div>
-
-    <main>
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8 mt-5">
-                <form>
-                    <div class="mb-3">
-                        <label class="form-label">Nome do Cliente</label>
-                        <input type="text" class="form-control" id="">
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Endereço</label>
-                        <input type="text" class="form-control" id="">
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Telefone</label>
-                        <input type="tel" class="form-control" id="">
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Marcas de Interesse</label>
-                        <input type="text" class="form-control" id="">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
-            <div class="col-2"></div>
-        </div>
-    </main>
 
 </body>
 
