--- a/templates/index.html
+++ b/templates/index.html
@@ -1,58 +1,4 @@
-<!doctype html>
-<html lang="pt-br">
+{% extends "base.html" %}
+{% block content %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ERP</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../static/style.css">
-</head>
-
-<body>
-
-    <div class="container d-flex">
-        <ul class="nav nav-tabs flex-grow-1">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Início</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/clientes">Clientes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Produtos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Vendas</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Entradas</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Saídas</a>
-            </li>
-        </ul>
-        <ul class="nav nav-tabs">
-            <div class="dropdown">
-                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Configurações</button>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </div>
-            <li class="nav-item">
-                <a class="nav-link text-danger" href="/logout">Logout</a>
-            </li>
-        </ul>
-    </div>
-
-</body>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-
-</html>
+{% endblock %}
