--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -1,7 +1,62 @@
 {% extends "base.html" %}
 {% block content %}
 
-<main>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-2">
+            <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalNovoCliente">Novo
+                Cliente</button>
+        </div>
+        <div class="col-10">
+            <form class="d-flex" role="search" method="GET" action="{{ url_for('clientes.procurar_clientes') }}">
+                <input class="form-control me-2" type="search" placeholder="Procure por um cliente..."
+                    aria-label="Search" name="query">
+                <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="modalNovoCliente" tabindex="-1" aria-labelledby="modalNovoCliente" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Adicionando um novo cliente</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form action="{{ url_for('clientes.novo_cliente') }}" method="POST">
+                    <div class="row">
+                        <div class="form-group col-6 mb-3">
+                            <label class="form-label" for="nome">Nome</label>
+                            <input name="nome" id="nome" type="text" class="form-control" required autofocus>
+                        </div>
+                        <div class="form-group col-6 mb-3">
+                            <label class="form-label" for="endereco">Endereço</label>
+                            <input name="endereco" id="endereco" type="text" class="form-control" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-6 mb-3">
+                            <label class="form-label" for="telefone">Telefone</label>
+                            <input name="telefone" id="telefone" type="tel" class="form-control" required>
+                        </div>
+                        <div class="form-group col-6 mb-4">
+                            <label class="form-label" for="interesse">Marcas de Interesse</label>
+                            <input name="interesse" id="interesse" type="text" class="form-control" required>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
+                        <button type="submit" value="Register" class="btn btn-success">Salvar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- <main>
     <div class="row">
         <div class="col-2"></div>
         <div class="col-8 mt-3">
@@ -32,7 +87,7 @@
         </div>
         <div class="col-2"></div>
     </div>
-</main>
+</main> -->
 
 <br>
 
@@ -48,7 +103,7 @@
                 <th scope="col">Ações</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="clientes-table-body">
             {% for cliente in clientes %}
             <tr>
                 <th scope="row">{{ cliente.id }}</th>
