--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -56,39 +56,6 @@
     </div>
 </div>
 
-<!-- <main>
-    <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8 mt-3">
-            <h3 class="mb-3">Adicione um novo cliente</h3>
-            <form action="{{ url_for('clientes.novo_cliente') }}" method="POST">
-                <div class="row">
-                    <div class="form-group col-6 mb-3">
-                        <label class="form-label" for="nome">Nome do Cliente</label>
-                        <input name="nome" id="nome" type="text" class="form-control" required autofocus>
-                    </div>
-                    <div class="form-group col-6 mb-3">
-                        <label class="form-label" for="endereco">Endereço</label>
-                        <input name="endereco" id="endereco" type="text" class="form-control" required>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group col-6 mb-3">
-                        <label class="form-label" for="telefone">Telefone</label>
-                        <input name="telefone" id="telefone" type="tel" class="form-control" required>
-                    </div>
-                    <div class="form-group col-6 mb-3">
-                        <label class="form-label" for="interesse">Marcas de Interesse</label>
-                        <input name="interesse" id="interesse" type="text" class="form-control" required>
-                    </div>
-                </div>
-                <button type="submit" value="Register" class="btn btn-primary">Confirmar</button>
-            </form>
-        </div>
-        <div class="col-2"></div>
-    </div>
-</main> -->
-
 <br>
 
 <div class="container mt-3">
@@ -113,8 +80,13 @@
                 <td>{{ cliente.interesse }}</td>
                 <td>
                     <form action="#" style="display:inline;">
-                        <button class="btn" data-bs-toggle="modal" data-bs-target="#modalEditarCliente">
+                        <button class="btn">
                             <i class="bi bi-pencil-square text-primary"></i>
+                        </button>
+                    </form>
+                    <form action="#" style="display:inline;">
+                        <button class="btn">
+                            <i class="bi bi-eye-fill"></i>
                         </button>
                     </form>
                     <form action="{{ url_for('clientes.eliminar_cliente', cliente_id=cliente.id) }}" method="POST"
@@ -128,6 +100,32 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page > 1 %}
+                <li class="page-item">
+                    <a class="page-link" href="{{ url_for('clientes.clientes', page=page-1) }}" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+            {% endif %}
+
+            {% for p in range(1, total_pages + 1) %}
+                <li class="page-item {% if p == page %}active{% endif %}">
+                    <a class="page-link" href="{{ url_for('clientes.clientes', page=p) }}">{{ p }}</a>
+                </li>
+            {% endfor %}
+
+            {% if page < total_pages %}
+                <li class="page-item">
+                    <a class="page-link" href="{{ url_for('clientes.clientes', page=page+1) }}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
 </div>
 
 {% endblock %}
