--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                 <a class="nav-link {{ 'active' if route_name == 'clientes' else '' }}" href="clientes">Clientes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {{ 'active' if route_name == 'produtos' else '' }}" href="#">Produtos</a>
+                <a class="nav-link {{ 'active' if route_name == 'produtos' else '' }}" href="produtos">Produtos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link {{ 'active' if route_name == 'vendas' else '' }}" href="#">Vendas</a>
