--- a/produtos/templates/produtos.html
+++ b/produtos/templates/produtos.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>produtos</h1>
+<div class="container">
+    <h1>Produtos</h1>
+</div>
 
 {% endblock %}
