--- a/templates/base.html
+++ b/templates/base.html
@@ -34,41 +34,44 @@
         </div>
     </div>
 
-    <div class="container d-flex">
-        <ul class="nav nav-tabs flex-grow-1">
-            <li class="nav-item">
-                <a class="nav-link {{ 'active' if route_name == 'index' else '' }}" href="/">Início</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link {{ 'active' if route_name == 'clientes' else '' }}" href="clientes">Clientes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link {{ 'active' if route_name == 'produtos' else '' }}" href="produtos">Produtos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link {{ 'active' if route_name == 'vendas' else '' }}" href="#">Vendas</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link {{ 'active' if route_name == 'entradas' else '' }}" href="#">Entradas</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link {{ 'active' if route_name == 'saidas' else '' }}" href="#">Saídas</a>
-            </li>
-        </ul>
-        <ul class="nav nav-tabs">
-            <div class="dropdown">
-                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">Configurações</button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Configuração 1</a></li>
-                    <li><a class="dropdown-item" href="#">Configuração 2</a></li>
-                    <li><a class="dropdown-item" href="#">Configuração 3</a></li>
-                </ul>
-            </div>
-            <li class="nav-item">
-                <a class="nav-link text-danger" href="/logout">Logout</a>
-            </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container d-flex">
+            <img class="w-25 navbar-brand" src="{{ url_for('static', filename='image.png') }}" alt="logo">
+            <ul class="nav flex-grow-1">
+                <li class="nav-item">
+                    <a class="nav-link {{ 'active' if route_name == 'index' else '' }}" href="/">Início</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {{ 'active' if route_name == 'clientes' else '' }}" href="clientes">Clientes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {{ 'active' if route_name == 'produtos' else '' }}" href="produtos">Produtos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {{ 'active' if route_name == 'vendas' else '' }}" href="vendas">Vendas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {{ 'active' if route_name == 'entradas' else '' }}" href="#">Entradas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {{ 'active' if route_name == 'saidas' else '' }}" href="#">Saídas</a>
+                </li>
+            </ul>
+            <ul class="nav">
+                <div class="dropdown">
+                    <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">Configurações</button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Configuração 1</a></li>
+                        <li><a class="dropdown-item" href="#">Configuração 2</a></li>
+                        <li><a class="dropdown-item" href="#">Configuração 3</a></li>
+                    </ul>
+                </div>
+                <li class="nav-item">
+                    <a class="nav-link text-danger" href="/logout">Logout</a>
+                </li>
+            </ul>
+    </nav>
     </div>
 
     <div class="container">
